Fix horizontal padding on small screens. Fixes #794.

--- a/src/styles/components/_layouts.scss
+++ b/src/styles/components/_layouts.scss
@@ -16,10 +16,10 @@
   box-sizing: content-box;
   margin: 0 auto;
   overflow: visible;
-  padding: 24px 72px;
+  padding: 24px;
 
   @include bp(sm) {
-    padding: 32px 72px;
+    padding: 32px;
   }
 }
 
